tests/testcases/valid/local_static/04_static_array_no_init.ciel
// Test local static array without initializer
int test_static_array() {
    static int arr[5];
    arr[0] = 10;
    arr[1] = 20;
    arr[2] = 30;
    return arr[2];
}

int main() {
    int result = test_static_array();  // Should be 30
    return 0;
}
