tests/testcases/invalid/semantic/87_assign_to_comparison_result.ciel
// Error: assign to comparison result
int main() {
    int a = 5;
    int b = 10;

    // Error: (a == b) returns bool rvalue
    (a == b) = 1;

    return 0;
}
